--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="control">
-                <a>Forget Password?</a>
+                <a href="forgetpassword.html">Forget Password?</a>
             </div>
             <div class="control">
                 <button onclick="checkPass()" class="button is-link is-success is-fullwidth">Login</button>
